# LearnOpenGL

./: CMakeLists.txt  glad.c  main.cpp
application/: Application.cpp  Application.h
wrapper/: checkError.cpp  checkError.h
